--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.9",
     "slugify": "^1.6.6"
   }
