--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "dompurify": "^3.2.6",
+    "flag-icon-css": "^4.1.7",
     "framer-motion": "^12.23.22",
     "html-react-parser": "^5.2.6",
     "jodit-react": "^5.2.19",
+    "libphonenumber-js": "^1.12.23",
     "lucide-react": "^0.544.0",
     "moment": "^2.30.1",
     "primereact": "^10.9.3",
@@ -26,9 +28,10 @@
     "react-dom": "^19.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
-    "react-hot-toast": "^2.5.2",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-router-hash-link": "^2.4.3",
